feat: create jobs and tasks
